chore: edit logic
