# docs/swagger.json
@@ -7,17 +7,17 @@
         "contact": {},
         "version": "1.0"
     },
-    "host": "localhost:8081",
+    "host": "localhost:8082",
     "basePath": "/api",
     "paths": {
-        "/orders": {
+        "/backend/transactions": {
             "post": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Create an order with status Created",
+                "description": "Create an transaction with status Created",
                 "consumes": [
                     "application/json"
                 ],
@@ -25,10 +25,10 @@
                     "application/json"
                 ],
                 "tags": [
-                    "orders"
+                    "transactions"
                 ],
-                "summary": "Create an order",
-                "operationId": "api-payments-create-order",
+                "summary": "Create an transaction",
+                "operationId": "api-payments-create-transaction",
                 "parameters": [
                     {
                         "description": "Add Product",
@@ -36,7 +36,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/forms.CreateOrder"
+                            "$ref": "#/definitions/forms.CreateTransaction"
                         }
                     }
                 ],
@@ -50,14 +50,14 @@
                 }
             }
         },
-        "/orders/{id}": {
+        "/backend/transactions/{id}": {
             "get": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Get an created order",
+                "description": "Get an created transaction",
                 "consumes": [
                     "application/json"
                 ],
@@ -65,10 +65,10 @@
                     "application/json"
                 ],
                 "tags": [
-                    "orders"
+                    "transactions"
                 ],
-                "summary": "Find an order",
-                "operationId": "api-payments-read-order",
+                "summary": "Find an transaction",
+                "operationId": "api-payments-read-transaction",
                 "parameters": [
                     {
                         "type": "string",
@@ -82,20 +82,20 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Order"
+                            "$ref": "#/definitions/models.Transaction"
                         }
                     }
                 }
             }
         },
-        "/orders/{id}/cancel": {
+        "/backend/transactions/{id}/cancel": {
             "post": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Get an created order",
+                "description": "Get an created transaction",
                 "consumes": [
                     "application/json"
                 ],
@@ -103,10 +103,10 @@
                     "application/json"
                 ],
                 "tags": [
-                    "orders"
+                    "transactions"
                 ],
-                "summary": "Cancel an order",
-                "operationId": "api-payments-cancel-order",
+                "summary": "Cancel an transaction",
+                "operationId": "api-payments-cancel-transaction",
                 "parameters": [
                     {
                         "type": "string",
@@ -120,7 +120,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Order"
+                            "$ref": "#/definitions/models.Transaction"
                         }
                     }
                 }
@@ -128,17 +128,26 @@
         }
     },
     "definitions": {
-        "forms.CreateOrder": {
+        "forms.CreateTransaction": {
             "type": "object",
             "required": [
-                "product"
+                "products"
             ],
             "properties": {
-                "product": {
+                "id": {
+                    "type": "string"
+                },
+                "products": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/forms.Product"
                     }
+                },
+                "status": {
+                    "type": "string"
+                },
+                "userId": {
+                    "type": "string"
                 }
             }
         },
@@ -161,37 +170,23 @@
                 }
             }
         },
-        "models.Order": {
+        "models.Transaction": {
             "type": "object",
             "properties": {
+                "amount": {
+                    "type": "number"
+                },
                 "id": {
                     "type": "string"
                 },
-                "products": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Product"
-                    }
+                "orderId": {
+                    "type": "string"
                 },
                 "status": {
                     "type": "string"
                 },
                 "userId": {
                     "type": "string"
-                }
-            }
-        },
-        "models.Product": {
-            "type": "object",
-            "properties": {
-                "amount": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "price": {
-                    "type": "number"
                 }
             }
         }
