# services/orders.go
@@ -1,40 +1,64 @@
 package services
 
 import (
+	"io/ioutil"
+	"log"
 	"net/http"
-	"time"
+	"os"
 
-	"github.com/gin-gonic/gin"
+	"github.com/joho/godotenv"
 )
 
 type OrdersService struct{}
 
-func (ordersService OrdersService) ConfirmOrder(orderId string) {
-
-}
-
-func (ordersService OrdersService) CancelOrder(orderId string) {
-
-}
-
-func (ordersService OrdersService) callOrderApi(websiteURL string, c *gin.Context) {
-
-	client := &http.Client{
-		// Set timeout to abort if the request takes too long
-		Timeout: 30 * time.Second,
-	}
-
-	request, err := http.NewRequest("GET", websiteURL, nil)
-
+func (ordersService OrdersService) CancelOrder(orderId string) error {
+	err := godotenv.Load(".env")
 	if err != nil {
-		c.AbortWithStatusJSON(500, gin.H{"message": err})
+		log.Fatalf("Error loading .env file")
 	}
-
-	// Make website request call
-	resp, err := client.Do(request)
-
-	// If we have a successful request
-	if resp.StatusCode == 200 {
-
+	orderUrl := os.Getenv("API_ORDERS_HOST") + os.Getenv("API_ORDERS_PORT")
+	cancelOrderUrl := orderUrl + "/orders/" + orderId + "/cancel"
+	//Leverage Go's HTTP Post function to make request
+	resp, err := http.Post(cancelOrderUrl, "application/json", nil)
+	//Handle Error
+	if err != nil {
+		log.Fatalf("An Error Occured %v", err)
+		return err
 	}
+	defer resp.Body.Close()
+	//Read the response body
+	body, err := ioutil.ReadAll(resp.Body)
+	if err != nil {
+		return err
+	}
+	sb := string(body)
+	log.Printf(sb)
+
+	return nil
+}
+
+func (ordersService OrdersService) ConfirmOrder(orderId string) error {
+	err := godotenv.Load(".env")
+	if err != nil {
+		log.Fatalf("Error loading .env file")
+	}
+	orderUrl := os.Getenv("API_ORDERS_HOST") + os.Getenv("API_ORDERS_PORT")
+	cancelOrderUrl := orderUrl + "/orders/" + orderId + "/confirm"
+	//Leverage Go's HTTP Post function to make request
+	resp, err := http.Post(cancelOrderUrl, "application/json", nil)
+	//Handle Error
+	if err != nil {
+		log.Fatalf("An Error Occured %v", err)
+		return err
+	}
+	defer resp.Body.Close()
+	//Read the response body
+	body, err := ioutil.ReadAll(resp.Body)
+	if err != nil {
+		return err
+	}
+	sb := string(body)
+	log.Printf(sb)
+
+	return nil
 }
